# murlang

./: Cargo.toml  LICENSE  README.md
examples/: fibonacci.mur  run.mur  teste.mur
scripts/: banner.txt  install.bat  install.sh
src/: ast.rs  expression_parser.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  mod.rs  parser.rs  value_parser.rs
src/interpreter/: async_manager.rs  environment.rs  error.rs  evaluator.rs  mod.rs  runtime.rs
